indhold til teamer

--- a/animation.html
+++ b/animation.html
@@ -81,27 +81,72 @@
         </div>
         <img class="arrow_small center beat" src="pictures/SVG/downarrow.png" alt="downarrow">
 
+        <div class="sectionwrapper">
 
+
+
+            <div class="col">
+                <h3>Tema 3 - Grundlæggende animation</h3>
+                <p>I tema 3 havde vi animation. Vi lærte at bruge animationer for at fremstille interaktive bruger-grænseflader der engagerer og motiverer brugeren. I dette tema har vi kodet to computerspil fra bunden, et af dem individuelt, og det andet i gruppe.
+                    I starten af dette forløb blev vi blandt andet introduceret til javascript, aktivitetsdiagrammer, statemachinediagrammer, som alle blev anvendt i processen til vores individuelle computerspil.<br> Alle metoder var også efterfølgende blevet anvendt i gruppespillet.
+                    Under gruppespil forløbet fik vi flere værktøjer med, som vi kunne bruge til at optimere vores spil. Vi blev for eksempel introduceret til forskellige test-metoder, blandt andet 5 sekunders test, eksperttest, spørgeskemaer og interviews.
+                    Desuden lærte vi om SCRUM metoden ved anvending af Trello og burndown-chart, for at holde styr på vores opgaver, skabe et bedre overblik over hvor langt vi var nået i processen,og sørge for at bruge tiden vi havde rigtigt.
+                </p>
+
+
+            </div>
+            <div class="col">
+
+            </div>
+
+        </div>
         <div class="sectionwrapper">
 
             <div class="col">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum voluptatibus vitae consectetur ipsa commodi, hic distinctio tempora laudantium ut repellendus ratione numquam consequatur nobis minus dolores corporis sed. Temporibus, maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus provident consectetur accusamus, molestiae dolores reiciendis, nisi porro doloremque itaque minima natus pariatur harum fuga beatae tempore recusandae dignissimos repudiandae maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia et, cumque sed dignissimos maiores nemo dolorem vero, veniam voluptas mollitia. Sed quam molestiae maiores esse voluptates veniam, sapiente laboriosam veritatis!</p>
+                <h3>Save the pigs - spillet </h3>
+                <p> Save the pigs er navnet på mit spil, som jeg individuelt kodede fra bunden.
+                    Vi startede ud med idegenereringsøvelser blandt andet med mindmapping, kryds-metode og skitsering. Da jeg havde fastlagt min stil og ide tegnede jeg figurer, baggrunde, UI-elementer og yderligere spilelementer i Adobe Illustrator. Jeg lavede aktivitetsdiagrammet for at få bedre styr på flowet i spillet fra start til slut, og javascript brugte jeg for at bedre kunne visualisere hvordan spillet skulle programmeres for at det blev interaktivt som jeg ønskede.
+                </p>
                 <div class="button">
-                    <a href="#">Se videospil</a>
-                    <a href="#">Se videospil2</a>
+                    <a href="http://www.mmd-andrea.dk/kea/04_animation/04_02_01/">Spil Save the pigs</a>
+                    <a href="http://www.mmd-andrea.dk/kea/04_animation/04_02_01/04_01_04_Spil_AndreaValgeirsdottir.pdf">Se dokumentation</a>
+                </div>
+
+            </div>
+            <div class="col">
+
+                <figure>
+                    <img src="pictures/SVG/savethepigs.svg" alt="savethepigs">
+                </figure>
+
+            </div>
+
+        </div>
+        <div class="sectionwrapper">
+
+            <div class="col">
+                <h3>Take action - spillet </h3>
+                <p>
+                    Denne gang skulle vi kode et spil for Sex og samfund, og havde derfor nogle faste rammer omkring hvad spillet skulle handle om. Formålet med spillet var at oplyse unge, om hvilke rettigheder de har når det gælder billeddeling. Som i det første spil, lavede vi aktivitetsdiagram for at sikre os, at vi havde styr på user flow, og statemachinediagram for at have styr på javascript struktur.<br>
+                    Vi testet vores idé, som et af det første, hvor vi anvendte en semistruktureret interview med en dreng i vores målgruppe. Det hjalp os med at gå i den retning som ville appellerede til målgruppen.
+                    Til sidst skulle spillet testes til fernisering, hvor vi anvendte 5-sekunders test og et spørgeskema. Disse metoder ville give os indblik i, om der er plads til forbedringer. Vi fik nogle gode svar, som vi kan bruge til at reflektere hvad kunne have været gjort bedre.
+                </p>
+                <div class="button">
+                    <a href="http://michelleyoung.dk/kea/04_animation/spil1/index.html">Spil Take Action! </a>
+                    <a href="http://michelleyoung.dk/kea/04_animation/gruppe_8_dokumentationssite/index.html">Se dokumentation</a>
                 </div>
 
 
             </div>
             <div class="col">
+
                 <figure>
-                    <img src="pictures/SVG/quirky.png" alt="quirky">
-                    <figcaption>Billedtekst</figcaption>
+                    <img src="pictures/SVG/takeaction.svg" alt="takeaction">
                 </figure>
+
             </div>
 
         </div>
-
     </section>
 
     <script src="script.js"></script>
@@ -109,7 +154,7 @@
         <div class="sectionwrapper">
             <div class="col">
                 <h2>CONTACT</h2>
-                <p>Phone: +45 42 32 63 24 Mail:<a href="mailto:andr60c0@stud.kea.dk">andr60c0(at)stud.kea.dk</a></p>
+                <p>Phone: +45 42 32 63 24<br> Mail:<a href="mailto:andr60c0@stud.kea.dk">andr60c0(at)stud.kea.dk</a></p>
             </div>
             <div class="col">
                 <h2>FOLLOW</h2>
