--- a/indhold.html
+++ b/indhold.html
@@ -87,19 +87,38 @@
 
 
             <div class="col">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum voluptatibus vitae consectetur ipsa commodi, hic distinctio tempora laudantium ut repellendus ratione numquam consequatur nobis minus dolores corporis sed. Temporibus, maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus provident consectetur accusamus, molestiae dolores reiciendis, nisi porro doloremque itaque minima natus pariatur harum fuga beatae tempore recusandae dignissimos repudiandae maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia et, cumque sed dignissimos maiores nemo dolorem vero, veniam voluptas mollitia. Sed quam molestiae maiores esse voluptates veniam, sapiente laboriosam veritatis!</p>
+                <h3>Tema 4 - Grundlæggende indhold</h3>
+                <p>I dette tema skulle vi i grupper lave et forbedret redesign, af et eksisterende website, for eksempel ved forbedring af brugervenlighed eller skabe bedre indhold. Vi skulle samtidig lave en video om virksomheden.
+                    Vi blev introduceret for github for at alle gruppemedlemmer kunne arbejde med samme kode. </p>
+
+
+            </div>
+            <div class="col">
+
+
+
+            </div>
+
+        </div>
+        <div class="sectionwrapper">
+
+
+
+            <div class="col">
+                <h3>Redesign - Wonderwhy</h3>
+                <p>I denne opgave lavede vi en forbedret website for Wonderwhy. Da Wonderwhy havde en meget minimalistisk og ren hjemmeside, besluttede vi holdt os til det. De vil ikke have nogle farver udover sort og hvid, så derfor valgte vi, at kun arbejde med sort og hvid på vores redesign site. Indholdet giver også forskellige farver - for eksempel billederne på artisterne har alle forskellige udtryk og forskellige fotostile, så det giver farve til sitet. Vi arbejdede med CSS animationer og javascript for at skabe et interaktiv hjemmeside som fanger brugeren. Som i tidligere opgaver, lavede vi wireframe og layout diagram for at bedre kunne visualisere opsætning af sitet, og lavede prototype i Adobe XD. Moodboard og styletile brugte vi til at definere stil og font.
+                    Vi benyttede os af BERT-tests og 5-sekunders test for at a give os et bedre indblik i hvordan brugeren opfattede websitet. Da vi også interviewet ejeren af Wonderwhy, som fortalte om hvordan Wonderwhy egentlig vil opfattes, så hjalp det rigtig meget at få lavet de tests, så vi havde en god idé om hvordan vi kunne komme tættere på målet. </p>
                 <div class="button">
-                    <a href="#">Se stilartsite</a>
-                    <a href="#">Se stilartsite</a>
+                    <a href="https://nicohj.dk/kea/05_content/05_03_redesign/index.html">Se stilartsite</a>
+                    <a href="file:///Users/andreavalgeirsdottir/Desktop/kea/05_indhold/05_03_01/dokumentationssite/analyse.html">Se dokumentation</a>
                 </div>
 
 
             </div>
             <div class="col">
-                <figure>
-                    <img src="pictures/SVG/quirky.png" alt="quirky">
-                    <figcaption>Billedtekst</figcaption>
-                </figure>
+
+                <img src="pictures/SVG/pic2.svg" alt="2">
+
             </div>
 
         </div>
