--- a/ux.html
+++ b/ux.html
@@ -78,7 +78,7 @@
 
             <div class="col">
                 <h3>Tema 2 - Grundlæggende UX</h3>
-                <p>I tema 2 lært vi om user experience. I denne periode havde vi fire moduler som vi gik igennem - data, indhold, prototype og designsprint. I de første to moduler blev vi introduceret for forskellige research og analyse metoder, samt værktøjer til at optimere brugeroplevelse. Den viden tog vi så videre med os til de næste to moduler, hvor vi fik udarbejdet to prototyper i Adobe XD. Den første individuelt på en webshop prototype, og derefter arbejde i grupper på en prototype, hvor udgangspunktet var at forbedre et problematisk område som kan opstå for studerende på KEA. </p>
+                <p>I tema 2 lært vi om user experience. I denne periode havde vi fire moduler som vi var igennem - data, indhold, prototype og designsprint. I de første to moduler blev vi introduceret for forskellige research, analyse metoder, samt brugertests til at optimere brugeroplevelse. Den viden tog vi så videre med os til de næste to moduler, hvor vi fik udarbejdet to prototyper i Adobe XD. Den første arbejdede vi individuelt på, og den anden arbejdede vi på i grupper. </p>
 
 
             </div>
@@ -87,16 +87,12 @@
         <div class="sectionwrapper">
 
             <div class="col_left">
-                <h3>Individuel prototype</h3>
-                <p> I denne opgave blev vi introduceret for
-                    LoFi - HiFi
-                    Styletile
-                    UIkit
-                    Copy og microcopy
-                    klikbar prototype transitions </p>
+                <h3>DJcupz - Individuel prototype</h3>
+                <p> I denne opgave skulle vi lave en webshop prototype, udfra forudbestemte emner. Jeg begyndte med at lave en LoFi prototype, styletile og wireframe. Med brug af disse værktøjer er det nemmere at komme videre til næste skridt - som var HiFi prototypen. Den lavet jeg i Adobe XD. Med brug af XD transitions funktionen, kunne prototypen gøres klikbar. Mit hovedfokus var, at følge web design konventioner så vidt som muligt, blandt andet med at følge gestaltlove, lav call to action, microcopies og fangende indholdstekst.
+                </p>
                 <div class="button">
                     <a href="https://xd.adobe.com/view/234c288d-5b5c-4214-66e6-8b2906c9ebc4-557d/">Se prototype</a>
-                    <a href="pictures/SVG/ux_webshop_styletile.svg">Se dokumentation</a>
+                    <a href="pictures/SVG/ux_webshop_styletile.svg">Se styletile</a>
                 </div>
 
 
@@ -104,19 +100,8 @@
             <div class="col_right">
                 <div class="col_pic">
                     <figure>
-                        <img src="pictures/SVG/ux_prototypepic.svg" alt="ux_prototypepic">
-                        <figcaption>Screenshots af webshop</figcaption>
+                        <img src="pictures/SVG/djcupz.svg" alt="ux_djcups">
                     </figure>
-                </div>
-                <div class="col_pic">
-                    <figure>
-
-                        <img src="pictures/SVG/ux_prototypepic2.svg" alt="ux_prototypepic2">
-
-                    </figure>
-
-
-
                 </div>
             </div>
 
@@ -124,11 +109,13 @@
         <div class="sectionwrapper">
 
             <div class="col_left">
-                <h3>Gruppe prototype</h3>
-                <p>krkrkrkr </p>
+                <h3>Group'r - Gruppe prototype</h3>
+                <p>I denne opgave skulle vi lave en prototype til en app, der kunne gøre studielivet bedre for studerende på KEA. Min gruppe og jeg, valgte at lave en prototype til en app til gruppedannelse. Formålet med den app er at gøre det nemmere, at søge/finde gruppemedlemmer for at danne den perfekte gruppe.<br>
+                    For at opnå vores mål, har vi gået igennem et designsprint. Designsprint er en genvej til at skabe et bedre overblik over ens problemstilling - og komme hurtigere til en løsning. I dette forløb var vi igennem forskellige processer for at komme tættere på vores problemløsning. Vi har, blandt andet, lavet desktop research, mapping, storyboard og tænk højt test.
+                </p>
                 <div class="button">
-                    <a href="#">Se prototype</a>
-                    <a href="#">Se dokumentation</a>
+                    <a href="https://xd.adobe.com/view/0eb20123-51b5-4af3-44ba-c714f22bad04-7883/screen/54a350c6-3cf4-4b28-8777-831165dad9b7/Sakina-Splash?fullscreen">Se prototype</a>
+                    <a href="pictures/designsprint.pdf">Se designsprint</a>
                 </div>
 
 
@@ -136,19 +123,8 @@
             <div class="col_right">
                 <div class="col_pic">
                     <figure>
-                        <img src="pictures/SVG/ux_prototypepic.svg" alt="ux_prototypepic">
-                        <figcaption>Screenshots af webshop</figcaption>
+                        <img src="pictures/SVG/groupr.svg" alt="ux_prototypepic">
                     </figure>
-                </div>
-                <div class="col_pic">
-                    <figure>
-
-                        <img src="pictures/SVG/ux_prototypepic2.svg" alt="ux_prototypepic2">
-
-                    </figure>
-
-
-
                 </div>
             </div>
 
