--- a/web.html
+++ b/web.html
@@ -70,11 +70,11 @@
 
         <div class="sectionwrapper">
 
-            <div class="col_left">
+            <div class="col_narrow">
                 <h3>Tema 1 - Grundlæggende web</h3>
-                <p>I tema 1 har vi lært om forskellige stilarter og responsivt web design, samt layoutprincipper, komposition og farver. Vi fik tildelt forskellige stilarter, hvor vi så skulle designe en hjemmeside som ville give udtryk for den tildelte stilart. </p>
+                <p>I tema 1 fik vi introduceret HTML og CSS, responsivt web design, layoutprincipper, komposition og farver. Udover det fik vi præsenteret forskellige stilarter, hvorefter vi fik opgaven at designe og kode en hjemmeside, der ville give udtryk for den tildelte stilart. </p>
             </div>
-            <div class="col_right">
+            <div class="col_wide">
                 <div col="col_pic">
                     <img src="pictures/SVG/flexeksempel.svg" alt="flexeksempel">
                 </div>
@@ -85,23 +85,23 @@
 
         </div>
         <div class="sectionwrapper">
-            <div class="col">
+            <div class="col_left">
                 <h3>Stilartsite - postmodernisme</h3>
-                <p>Til stilartsite opgaven fik jeg stilarten postmodernisme. Jeg begyndte på at researche stilarten og udfra det, valgte jeg at fokusere på stærke farver, varierende former og iøjenfaldende linjer for at få de postmodernistiske udtryk frem. For at hjælpe mig på vej med opgaven, har jeg, til det visuelle, lavet moodboard og styletile. Derefter har jeg udarbejdet prototype i Adobe XD.
-                    Desuden har jeg udarbejdet et splashbillede i photoshop.
-                    For kodning har jeg benyttet mig af wireframe, for at gøre det nemmere med opsætning af koden.
+                <p>Til stilartsite opgaven fik jeg stilarten postmodernisme. Jeg begyndte på at lave desktop research for at få fornemmelsen for hvad postmodernistiske udtryk er. Udfra det, valgte jeg at fokusere på stærke farver, varierende former og iøjenfaldende linjer for at få de postmodernistiske udtryk frem. For at hjælpe mig på vej med opgaven, har jeg lavet moodboard og styletile. Derefter har jeg udarbejdet prototype i Adobe XD.
+                    Desuden har jeg lavet et splashbillede i photoshop.<br>
+                    Til kodning har jeg benyttet mig af wireframe og layoutdiagram, for at gøre det nemmere med opsætning af koden.
                     For at gøre sitet responsivt har jeg brugt flexbox og media query, for at få både design og indhold til at passe til forskellige skærmstørrelser.</p>
                 <div class="button">
                     <a href="http://www.mmd-andrea.dk/kea/02_web/04_responsive/02_04_01_responsive_site_v2/index.html">Se stilartsite</a>
-                    <a href="http://www.mmd-andrea.dk/kea/02_web/04_responsive/02_04_01_responsive_site_v2/styletile.html">Se dokumentation</a>
+                    <a href="https://www.pinterest.dk/andreavalgeirs/postmodernisme/">Se research</a>
                 </div>
             </div>
 
 
-            <div class="col">
+            <div class="col_right">
                 <figure>
-                    <img src="pictures/SVG/webStyletile.svg" alt="webstyletile">
-                    <figcaption>Inspiration til stilartsite.</figcaption>
+                    <img src="pictures/SVG/web_pinterest.svg" alt="webstyletile">
+
                 </figure>
             </div>
 
